# alien-cdk

./: README.md  pyproject.toml
alien_dev_cdk/: __init__.py  handler.py  service.py  test___init__.py
tests/: service.py
